# HBC-Tool

./: README.md  pyproject.toml  requirements.txt  setup.py
hbctool/: __init__.py  __main__.py  _fastutil.cpp  hasm.py  metadata.py  util.py
hbctool/hbc/: _base.py
hbctool/hbc/hbc59/: __init__.py  parser.py  test.py  translator.py
hbctool/hbc/hbc62/: __init__.py  parser.py  test.py  translator.py
hbctool/hbc/hbc74/: __init__.py  parser.py  test.py  translator.py
hbctool/hbc/hbc76/: __init__.py  parser.py  test.py  translator.py
hbctool/hbc/hbc83/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc84/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc85/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc86/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc87/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc88/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc89/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc90/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc91/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc92/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc93/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc94/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc95/: __init__.py  parser.py  translator.py
hbctool/hbc/hbc96/: __init__.py  parser.py  translator.py
scripts/: benchmark_roundtrip.py
tests/: test_bitreader_readall.py  test_header_validation.py  test_memcpy.py
