[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata is declared in setup.py because the package ships C
# extensions (hbctool._fastutil, hbctool._bitcodec) which PEP 621 does not
# yet have a way to express. Keep setup.py as the single source of truth.
